--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%234f46e5' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M3.75 4.5A.75.75 0 0 1 4.5 3.75h4.5a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-.75.75h-4.5a.75.75 0 0 1-.75-.75v-4.5ZM3.75 15a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-.75.75h-4.5a.75.75 0 0 1-.75-.75v-4.5ZM15 3.75a.75.75 0 0 0-.75.75v4.5a.75.75 0 0 0 .75.75h4.5a.75.75 0 0 0 .75-.75v-4.5a.75.75 0 0 0-.75-.75h-4.5ZM16.5 6.75h1.5v1.5h-1.5v-1.5ZM5.25 6.75h1.5v1.5h-1.5v-1.5ZM5.25 17.25h1.5v1.5h-1.5v-1.5ZM15 15h1.5v1.5h-1.5v-1.5ZM16.5 16.5h1.5v1.5h-1.5v-1.5ZM15 18h1.5v1.5h-1.5v-1.5ZM16.5 19.5h1.5v1.5h-1.5v-1.5ZM18 15h1.5v1.5h-1.5v-1.5ZM19.5 16.5h1.5v1.5h-1.5v-1.5ZM18 18h1.5v1.5h-1.5v-1.5ZM19.5 19.5h1.5v1.5h-1.5v-1.5Z' /%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UTS QR Attendance</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -19,7 +19,7 @@
               'base-100': '#f3f4f6', // Light gray
               'base-200': '#ffffff', // White
               'base-300': '#e5e7eb', // Lighter gray
-            },
+            }
           },
         },
       }
@@ -32,7 +32,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "qrcode": "https://esm.sh/qrcode@^1.5.4",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "jsqr": "https://esm.sh/jsqr@^1.4.0"
   }
 }
 </script>
